examples/test/testpolicy10901.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: policy10901
  namespace: namespace389
spec:
  podSelector:
    matchLabels:
      key23: value5
  policyTypes:
  ingress:
  - from:
    - namespaceSelector:
        matchLabels:
          key38: value45
          key30: value1
          key41: value43
      podSelector:
        matchLabels:
          key32: value21
          key46: value39
